Select Topping, Size and Quantity

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -14,55 +14,55 @@
     </ion-toolbar>
   </ion-header>
 
-  <p>Please enter the number of pizzas:</p>
+  <p>Please enter the number of pizzas:{{numPizzas}}</p>
 
   <div id="quantityGrid">
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button>1</ion-button>
+          <ion-button (click)="appendDigit('1')">1</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>2</ion-button>
+          <ion-button (click)="appendDigit('2')">2</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>3</ion-button>
-        </ion-col>
-      </ion-row>
-
-      <ion-row>
-        <ion-col>
-          <ion-button>4</ion-button>
-        </ion-col>
-        <ion-col>
-          <ion-button>5</ion-button>
-        </ion-col>
-        <ion-col>
-          <ion-button>6</ion-button>
+          <ion-button (click)="appendDigit('3')">3</ion-button>
         </ion-col>
       </ion-row>
 
       <ion-row>
         <ion-col>
-          <ion-button>7</ion-button>
+          <ion-button (click)="appendDigit('4')">4</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>8</ion-button>
+          <ion-button (click)="appendDigit('5')">5</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>9</ion-button>
+          <ion-button (click)="appendDigit('6')">6</ion-button>
         </ion-col>
       </ion-row>
 
       <ion-row>
         <ion-col>
-          <ion-button>Reset</ion-button>
+          <ion-button (click)="appendDigit('7')">7</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>0</ion-button>
+          <ion-button (click)="appendDigit('8')">8</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button>Buy</ion-button>
+          <ion-button (click)="appendDigit('9')">9</ion-button>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-button (click)="reset()">Reset</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="appendDigit('0')">0</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button (click)="buy()">Buy</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -75,9 +75,9 @@
           <p>Toppings:</p>
           <ion-list>
             <ion-item *ngFor="let topping of toppings">
-              <ion-label>
+              <ion-button (click)="selectTopping(topping)">
                 {{topping.name}}
-              </ion-label>
+              </ion-button>
             </ion-item>
           </ion-list>
         </ion-col>
@@ -86,9 +86,9 @@
           <p>Sizes:</p>
           <ion-list>
             <ion-item *ngFor="let size of sizes">
-              <ion-label>
+              <ion-button (click)="selectSize(size)">
                 {{size.name}}
-              </ion-label>
+              </ion-button>
             </ion-item>
           </ion-list>
         </ion-col>
