--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -72,22 +72,22 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <p>Toppings:</p>
+          <p>Toppings: {{selectedTopping.name}} - ${{selectedTopping.price}}</p>
           <ion-list>
             <ion-item *ngFor="let topping of toppings">
               <ion-button (click)="selectTopping(topping)">
-                {{topping.name}}
+                {{topping.name}} - ${{topping.price}}
               </ion-button>
             </ion-item>
           </ion-list>
         </ion-col>
 
         <ion-col>
-          <p>Sizes:</p>
+          <p>Sizes: {{selectedSize.name}} - ${{selectedSize.price}}</p>
           <ion-list>
             <ion-item *ngFor="let size of sizes">
               <ion-button (click)="selectSize(size)">
-                {{size.name}}
+                {{size.name}} - ${{size.price}}
               </ion-button>
             </ion-item>
           </ion-list>
