--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Current Order</ion-title>
+    <ion-title>Update Order</ion-title>
   </ion-toolbar>
 </ion-header>
 
