Completed New Order Button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,18 @@
           <ion-note>Varshan Nagarajan</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
+            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
+              routerLinkActive="selected">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
+
           </ion-menu-toggle>
+          <ion-item lines="none" detail="false" (click)="newOrder()">
+            <ion-icon name="refresh-outline"></ion-icon>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <ion-label>New Order</ion-label>
+          </ion-item>
         </ion-list>
 
       </ion-content>
