Moving Functions to Manager Service

--- a/src/app/current-order/current-order.component.html
+++ b/src/app/current-order/current-order.component.html
@@ -44,7 +44,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button (click)=placeOrder() expand='block'>Place Order
+        <ion-button (click)="this.ms.placeOrder()" expand='block'>Place Order
         </ion-button>
       </ion-col>
     </ion-row>
