--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -58,14 +58,14 @@
 
       <ion-row>
         <ion-col>
-          <ion-button (click)="reset()" color="danger" expand="block" size="large">Reset
+          <ion-button (click)="resetQuantity()" color="danger" expand="block" size="large">Reset
           </ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="appendDigit('0')" expand="block" size="large" strong="true" fill="outline">0</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="buy()" color="success" expand="block" size="large">Buy
+          <ion-button (click)="buyButton()" color="success" expand="block" size="large">Buy
           </ion-button>
         </ion-col>
       </ion-row>
