Updated Buy Alert and Added Delete Alert

--- a/src/app/current-order/current-order.component.html
+++ b/src/app/current-order/current-order.component.html
@@ -31,7 +31,7 @@
 
     <ion-row *ngFor="let pizza of this.ms.currentOrder.pizzas; let i = index">
       <ion-col>
-        <ion-card>
+        <ion-card (click)="buyButton(i)">
           <ion-card-header>
             Pizza {{i+1}}
           </ion-card-header>
