--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -17,6 +17,8 @@
   <div id="quantityGrid">
     <ion-grid fixed="true">
       <ion-row>
+        <img src="https://image.flaticon.com/icons/png/512/3132/3132693.png" alt="pizza icon"
+          style="width:48px;height:48px;">
         <p>Please enter the number of pizzas: {{numPizzas}}</p>
       </ion-row>
 
